--- a/.gitattributes
+++ b/.gitattributes
@@ -34,6 +34,7 @@
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
+#.sql linguist-detectable=true
 
 ###############################################################################
 # behavior for image files
