--- a/.gitattributes
+++ b/.gitattributes
@@ -35,6 +35,7 @@
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
 #*.sql linguist-detectable=true
+#*.sql linguist-language=sql
 
 ###############################################################################
 # behavior for image files
