--- a/.gitattributes
+++ b/.gitattributes
@@ -34,8 +34,8 @@
 #*.modelproj merge=binary
 #*.sqlproj   merge=binary
 #*.wwaproj   merge=binary
-#*.sql linguist-detectable=true
-#*.sql linguist-language=sql
+*.sql linguist-detectable=true
+*.sql linguist-language=sql
 
 ###############################################################################
 # behavior for image files
