--- a/.gitattributes
+++ b/.gitattributes
@@ -2,6 +2,7 @@
 # Set default behavior to automatically normalize line endings.
 ###############################################################################
 * text=auto
+*.sql linguist-detectable=true
 
 ###############################################################################
 # Set default behavior for command prompt diff.
@@ -11,8 +12,6 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
-#*.sql linguist-detectable=true
-#*.sql linguist-language=sql
 
 ###############################################################################
 # Set the merge driver for project and solution files
